<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jek-en-ZpY" userLabel="MainStack">
                                <rect key="frame" x="20" y="58" width="374" height="804"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TFM-Ah-wVz" userLabel="HeaderStack">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ox-9O-UGZ" userLabel="QuestionLabel">
                                                <rect key="frame" x="0.0" y="0.0" width="187" height="24"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BMM-iU-4fa" userLabel="CounterLabel">
                                                <rect key="frame" x="187" y="0.0" width="187" height="24"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Counter"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qzg-Ri-j01">
                                        <rect key="frame" x="0.0" y="58.5" width="374" height="561"/>
                                        <color key="backgroundColor" name="YP Black"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="qzg-Ri-j01" secondAttribute="height" multiplier="2:3" id="AA7-gt-kYR"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                                <integer key="value" value="8"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxL-OO-8cZ">
                                        <rect key="frame" x="0.0" y="654.5" width="374" height="55"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="YaI-QD-nGZ" userLabel="ButtonStack">
                                        <rect key="frame" x="0.0" y="744" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LGs-sG-V8W" userLabel="NoButton">
                                                <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked" destination="BYZ-38-t0r" eventType="touchUpInside" id="2lb-Xs-GWu"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nUB-74-uDI" userLabel="YesButton">
                                                <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked" destination="BYZ-38-t0r" eventType="touchUpInside" id="9Iv-kV-FgM"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="1q3-1m-2Kf"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="INW-qT-WkE" userLabel="Blur">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="v7h-dS-Ph0">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                </view>
                                <blurEffect style="regular"/>
                            </visualEffectView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="B55-rq-1Ro">
                                <rect key="frame" x="197" y="438" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="jek-en-ZpY" secondAttribute="top" constant="-10" id="BeN-mf-ov1"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jek-en-ZpY" secondAttribute="bottom" id="EE3-Pz-oI5"/>
                            <constraint firstItem="jek-en-ZpY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="P3I-G3-wUT"/>
                            <constraint firstAttribute="trailing" secondItem="INW-qT-WkE" secondAttribute="trailing" id="TIU-hH-0BM"/>
                            <constraint firstItem="B55-rq-1Ro" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="etC-P8-C9z"/>
                            <constraint firstItem="INW-qT-WkE" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="shn-c6-4zo"/>
                            <constraint firstItem="B55-rq-1Ro" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tzS-ZD-Sby"/>
                            <constraint firstItem="INW-qT-WkE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="vq6-u6-VGf"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jek-en-ZpY" secondAttribute="trailing" constant="20" id="vyI-vd-8VT"/>
                            <constraint firstAttribute="top" secondItem="INW-qT-WkE" secondAttribute="top" id="wQs-mV-TsF"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="B55-rq-1Ro" id="srm-J0-Mxz"/>
                        <outlet property="blur" destination="INW-qT-WkE" id="r9M-KB-R1z"/>
                        <outlet property="counterLabel" destination="BMM-iU-4fa" id="NAU-sN-plG"/>
                        <outlet property="imageView" destination="qzg-Ri-j01" id="EhH-Fc-ejD"/>
                        <outlet property="noButton" destination="LGs-sG-V8W" id="gan-oM-6L0"/>
                        <outlet property="questionLabel" destination="8ox-9O-UGZ" id="duT-at-YR3"/>
                        <outlet property="textLabel" destination="hxL-OO-8cZ" id="bnq-KB-odE"/>
                        <outlet property="yesButton" destination="nUB-74-uDI" id="7Jd-sY-mGL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
